# smokers

./: .gitignore  CMakeLists.txt  README.md
smokers_p1/: CMakeLists.txt  smokers_p1  smokers_p1.c
smokers_p2/: CMakeLists.txt  p2_agent  p2_agent.c  p2_smoker  p2_smoker.c  smokers_p2_common.h
smokers_p3/: CMakeLists.txt  p3_agent  p3_agent.c  p3_observer  p3_observer.c  p3_smoker  p3_smoker.c  smokers_p3_common.h
smokers_p4/: CMakeLists.txt  p4_agent  p4_agent.c  p4_observer  p4_observer.c  p4_smoker  p4_smoker.c  smokers_p4_common.h
